--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 		</ul>
 
 		<form>
-			<input class="button" hidden name="button" id="start" type="button"  value="PLAY"/>
+			<input class="button"  name="button" id="start" type="button"  value="Play"/>
 				&ensp;
-			<input class="button" hidden name="button" id="pause" type="button"  value="Pause"/>
+			<input class="button"  name="button" id="pause" type="button"  value="Pause"/>
 		</form>
 	</div>
 		<script type="text/javascript" src="js/main.js"></script>
