--- a/play.html
+++ b/play.html
@@ -8,7 +8,7 @@
 	</head>
 	<body class='homeBack' style="background-image: url('img/cards.jpeg')" >
 	<div class="btnBorder">
-	<a class="button" href="index.html" name="button">Start Game</a>
+	<a class="button" href="index.html" >Start Game</a>
 	</div>
 	<ul class="cards">
 	</ul>
