--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+<!DOCTYPE html>
+<html lang="en">
 
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width , initial-scale=0.5">
+
+
+	</head>
+
+	<div class='homeBack' style="background-image: url('img/cards.jpeg')">
+
+			<input class="buttonG" type="button" value="Start Game"/>
+	
+		<ul class="cardsHome">
+		</ul>
+	</div>
+
+</html>
 	<div class="Game">
 		<ul>
 			<li  class=" restart"><button  id="resetButton" type="button" >RESTART</button></li>
